argocd/simple-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /nginx-test
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
